[gd_scene load_steps=10 format=3 uid="uid://dlkwwiv5xnsh3"]

[ext_resource type="Script" path="res://main.gd" id="1_sokne"]
[ext_resource type="PackedScene" uid="uid://dt3jw71lqjsg7" path="res://Player/player.tscn" id="2_4cxbi"]
[ext_resource type="PackedScene" uid="uid://ek8d1dsq0p2r" path="res://Map/map.tscn" id="2_oj67l"]
[ext_resource type="Script" path="res://Audio/audio_manager.gd" id="2_p6xsu"]
[ext_resource type="PackedScene" uid="uid://klem43juy0la" path="res://Player/player_camera.tscn" id="3_3w5r2"]
[ext_resource type="PackedScene" uid="uid://4uh8ju6bm0bs" path="res://HUD/hud.tscn" id="5_3uvwg"]
[ext_resource type="PackedScene" uid="uid://c7jyxx5l3urm6" path="res://Enemy/wave_manager.tscn" id="5_8uh0m"]
[ext_resource type="PackedScene" uid="uid://ta5nkyww40li" path="res://Enemy/enemy_spawner.tscn" id="6_m5rpl"]
[ext_resource type="PackedScene" uid="uid://wi6sxyvsc7w8" path="res://HUD/game_over.tscn" id="8_5csj0"]

[node name="Main" type="Node" node_paths=PackedStringArray("wave_manager", "hud", "game_over")]
script = ExtResource("1_sokne")
wave_manager = NodePath("Wave Manager")
hud = NodePath("PlayerCamera/HUD")
game_over = NodePath("PlayerCamera/GameOver")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("2_p6xsu")

[node name="Map" parent="." instance=ExtResource("2_oj67l")]

[node name="Player" parent="." node_paths=PackedStringArray("hud") instance=ExtResource("2_4cxbi")]
position = Vector2(978, 527)
hud = NodePath("../PlayerCamera/HUD")

[node name="PlayerCamera" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_3w5r2")]
player = NodePath("../Player")

[node name="HUD" parent="PlayerCamera" instance=ExtResource("5_3uvwg")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="GameOver" parent="PlayerCamera" instance=ExtResource("8_5csj0")]
visible = false
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="Wave Manager" parent="." instance=ExtResource("5_8uh0m")]

[node name="EnemySpawner" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(543, 33)
player = NodePath("../../Player")

[node name="EnemySpawner2" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(1441, 35)
player = NodePath("../../Player")

[node name="EnemySpawner3" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(1885, 546)
player = NodePath("../../Player")

[node name="EnemySpawner4" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(543, 1054)
player = NodePath("../../Player")

[node name="EnemySpawner5" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(1441, 1053)
player = NodePath("../../Player")

[node name="EnemySpawner6" parent="Wave Manager" node_paths=PackedStringArray("player") instance=ExtResource("6_m5rpl")]
position = Vector2(34, 549)
player = NodePath("../../Player")

[connection signal="player_died" from="Player" to="." method="showGameOver"]
[connection signal="points_changed" from="Player" to="PlayerCamera/HUD" method="setPointsLabel"]
[connection signal="points_changed" from="Player" to="PlayerCamera/GameOver" method="setPointsLabel"]
[connection signal="new_game" from="PlayerCamera/GameOver" to="." method="newGame"]
[connection signal="new_game" from="PlayerCamera/GameOver" to="." method="hideGameOver"]
[connection signal="wave_changed" from="Wave Manager" to="PlayerCamera/HUD" method="setWaveLabel"]
[connection signal="wave_changed" from="Wave Manager" to="PlayerCamera/GameOver" method="setWaveLabel"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner" to="Wave Manager" method="enemySpawned"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner2" to="Wave Manager" method="enemySpawned"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner3" to="Wave Manager" method="enemySpawned"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner4" to="Wave Manager" method="enemySpawned"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner5" to="Wave Manager" method="enemySpawned"]
[connection signal="enemy_spawned" from="Wave Manager/EnemySpawner6" to="Wave Manager" method="enemySpawned"]
